--- a/style.css
+++ b/style.css
@@ -2763,6 +2763,31 @@ p.menu-text-title {
     .approach-num hr {
         width: 0;
     }
+    .testimonials {
+        width: 100%;
+        height: 100%;
+    }
+    .testimonial-title h1{
+        font-size: 40px;
+    }
+    .carousel-slider {
+        width: 100vw;
+    }
+    .carousel-slider > .carousel-content > .slide-item {
+        width: 100vw;
+    }
+    .slide-item {
+        width: 100vw;
+    }
+    .horizontal-slider .no-horizontal-slider .swiper-slide:nth-child(4) {
+        height: 100%;
+    }    
+    .testimonial-card .page {
+        height: 100%;
+    }
+    .testimonial-details {
+        margin-left: 0;
+    }
     .contact-work {
         width: 100%;
     }
@@ -2824,12 +2849,12 @@ p.menu-text-title {
         width: 100%;
         flex-direction: column;
         height: 100%;
-        bottom: 45px;
+        bottom: 5px;
     }
     .flag-container {
         flex-direction: row;
-        top: 20px;
         gap: 20px;
+        padding-top: 50px;
     }
     .flag-container .flag2 {
         margin-bottom: 10px;
@@ -2837,6 +2862,7 @@ p.menu-text-title {
     .work .content {
         max-width: 331px;
         margin-left: 0;
+        padding-bottom: 50px;
     }
     .work .content p {
         font-size: 16px;
