--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ h1, h2, h3, h4, h5, h6 {
 .testimonials {
     width: calc(100vw - 100px);
     height: 100vh;
-    background-color: #f8fcda;
+    background-color: #fff4ea;
 }
 
 .testimonial-title {
@@ -410,6 +410,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .testimonial-title h1 {
     font-size: 55px;
+    color: #f9b000;
     margin-top: 20px;
     font-weight: 600;
     text-transform: uppercase;
@@ -428,7 +429,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .testimonial-card .page{
-    background-color: #313451;
+    background-color: #000;
     width: 65rem;
     height: 75vh;
     margin-top: 20px;
@@ -440,8 +441,24 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 30px;
 }
 
-.testimonial-logo h3 {
-    color: #fff;
+.testimonial-logo.logo1 img {
+    width: 300px;
+    height: auto;
+}
+
+.testimonial-logo.logo2 img {
+    width: 80px;
+    height: auto;
+}
+
+.testimonial-logo.logo3 img {
+    width: 200px;
+    height: auto;
+}
+
+.testimonial-logo.logo4 img {
+    width: 80px;
+    height: auto;
 }
 
 .testimonial-content {
@@ -522,7 +539,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .carousel-slider .carousel-pagination .item {
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(192, 192, 192);
     transition: all 0.25s ease-in-out;
     color: white;
     min-height: 10px;
@@ -532,7 +549,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .carousel-slider .carousel-pagination .item:hover {
-    background-color: black;
+    background-color: rgb(134, 134, 134);
 }
 
 /* CONTACT & COPYRIGHT */
@@ -568,17 +585,29 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .logo-contact .logo {
-    width: 500px;
+    width: 380px;
     position: relative;
     bottom: 80px;
-    left: 120px;
+    left: 180px;
 }
 
 .logo-contact .logo img{
     width: 100%;
+}
+
+.logo-contact .motto {
+    width: 100%;
+    position: absolute;
+    left: 100px;
+}
+
+.logo-contact .motto h3 {
+    color: #fff4ea;
 }
 
 .contact-container {
@@ -845,7 +874,10 @@ label {
     overflow: hidden;
 }
 .copyright-section .logo-contact {
-    top: 40px;
+    top: 0;
+}
+.copyright-section .contact-container {
+    bottom: 20px;
 }
 .contact-copyright.copyright-section .contact-details {
     width: 100%;
@@ -853,7 +885,6 @@ label {
 .contact-copyright.copyright-section .copyright {
     width: 100%;
 }
-
 
 .contact-btn {
     font-size: 14px;
@@ -1091,6 +1122,18 @@ label {
     text-align: start;
     margin-left: 10px;
     margin-top: 15.5rem;
+}
+
+.service-motto {
+    margin-top: 40px;
+    margin-left: 70px;
+}
+
+.service-motto h4 {
+    font-size: 26px;
+    color: #f9b000;
+    font-family: 'Sacramento', cursive;
+    line-height: 1;
 }
 
 .service-main-list {
@@ -2039,10 +2082,10 @@ p.menu-text-title {
     margin-right: 5px;
 }
 
-.horizontal-slider .carousel-slider img {
+/* .horizontal-slider .carousel-slider img {
     height: 100vh;
     max-width: none;
-}
+} */
 
 .horizontal-slider .carousel-cat-links ul {
     list-style: none;
@@ -2192,7 +2235,10 @@ p.menu-text-title {
     .service-content .subservice-content {
         width: 67%;
     }
-    .contact-container {
+    .contact-copyright .contact-container {
+        bottom: 24px;
+    }
+    .copyright-section .contact-container {
         bottom: 50px;
     }
     .contact-container .contact-inputs {
@@ -2705,6 +2751,9 @@ p.menu-text-title {
         width: 100%;
         height: calc(100vh - 80px);
         margin: 0;
+    }
+    .about-us video {
+        height: 100%;
     }
     .approach {
         width: 100%;
