--- a/style.css
+++ b/style.css
@@ -1087,6 +1087,7 @@ label {
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     margin-right: 0;
     height: 100vh;
 } 
@@ -1096,24 +1097,23 @@ label {
 }
 
 .container .services-heading {
+    position: relative;
     font-size: 60px;
     font-weight: 900;
     text-transform: uppercase;
     color: #292726;
     text-align: start;
-    margin-left: 10px;
-    margin-top: 6.5rem;
+    margin-left: 30px;
+    margin-top: -50px;
 }
 
 .service-motto {
     position: absolute;
-    top: 6.5rem;
-    right: 40px;
+    margin-top: 25px;
 }
 
-.service-motto h1 {
-    width: 100%;
-    font-size: 32px;
+.service-motto p {
+    font-size: 18px;
     font-weight: 400;
     color: #000;
 }
@@ -1121,13 +1121,7 @@ label {
 .service-main-list {
     text-align: center;
     position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    right: 20px;
-    bottom: 30px;
-    width: 100%;
+    right: 70px;
 }
 
 .service-main-list li {
