--- a/style.css
+++ b/style.css
@@ -405,15 +405,12 @@ h1, h2, h3, h4, h5, h6 {
     width: 65rem;
     height: 75vh;
     margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .testimonial-logo {
     display: flex;
     justify-content: center;
+    margin-top: 25px;
 }
 
 .testimonial-logo img {
@@ -451,7 +448,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .testimonial-content p {
-    width: 80%;
+    width: 78%;
     font-size: 20px;
     text-align: justify;
     color: #fff;
@@ -467,6 +464,27 @@ h1, h2, h3, h4, h5, h6 {
     color: #f9b000;
     font-size: 20px;
     margin-right: 7px;
+}
+
+.testimonial-logo.logo1,
+.testimonial-logo.logo3,
+.testimonial-logo.logo4,
+.testimonial-logo.logo6 {
+    margin-top: 50px;
+}
+
+.testimonial-content.content1,
+.testimonial-content.content3,
+.testimonial-content.content4,
+.testimonial-content.small {
+    margin-top: 35px;
+}
+
+.testimonial-ratings.rating1,
+.testimonial-ratings.rating3,
+.testimonial-ratings.rating4,
+.testimonial-ratings.rating6 {
+    margin-top: 40px;
 }
 
 .carousel-slider * {
@@ -1096,8 +1114,8 @@ label {
 }
 
 .service-img {
-    margin-top: 45px;
-    width: 325px;
+    margin-top: 55px;
+    width: 380px;
 }
 
 .service-img img {
@@ -1131,7 +1149,7 @@ label {
 .service-main-list {
     text-align: center;
     position: absolute;
-    right: 0;
+    right: 30px;
 }
 
 .service-main-list li {
