--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 
 body a {
     text-decoration: none;
-    color: #000000;    
+    color: #fff;    
     transition: color .2s linear;
 }
 
@@ -409,8 +409,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .testimonial-logo {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    padding-top: 40px;
+    margin-top: 25px;
 }
 
 .testimonial-logo img {
@@ -419,7 +421,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .testimonial-logo.logo1 img {
-    width: 350px;
+    width: 320px;
 }
 
 .testimonial-logo.logo2 img {
@@ -436,11 +438,22 @@ h1, h2, h3, h4, h5, h6 {
     width: 200px;
 }
 
+.brand-name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 500;
+    color: #fff;
+    margin-top: 10px;
+    font-family: "Montserrat", sans-serif;
+}
+
 .testimonial-content {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .testimonial-content.small p {
@@ -448,7 +461,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .testimonial-content p {
-    width: 85%;
+    font-family: "Montserrat", sans-serif;
+    width: 78%;
     font-size: 20px;
     text-align: justify;
     color: #fff;
@@ -457,13 +471,47 @@ h1, h2, h3, h4, h5, h6 {
 .testimonial-ratings {
     display: flex;
     justify-content: center;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .testimonial-ratings i {
     color: #f9b000;
     font-size: 20px;
     margin-right: 7px;
+}
+
+.testimonial-logo.logo1,
+.testimonial-logo.logo3,
+.testimonial-logo.logo4,
+.testimonial-logo.logo6 {
+    margin-top: 50px;
+}
+
+.testimonial-logo.logo4 img {
+    margin-left: 14px;
+}
+
+.testimonial-logo.logo5 img {
+    margin-left: 22px;
+}
+
+.testimonial-logo.logo9 img {
+    margin-left: 18px;
+}
+
+.testimonial-logo.logo10 img {
+    margin-left: 7px;
+}
+
+.testimonial-content.small {
+    margin-top: 35px;
+}
+
+.testimonial-ratings.rating1,
+.testimonial-ratings.rating3,
+.testimonial-ratings.rating4,
+.testimonial-ratings.rating6 {
+    margin-top: 30px;
 }
 
 .carousel-slider * {
@@ -511,7 +559,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .carousel-slider .carousel-pagination .item {
-    background: rgba(192, 192, 192);
+    background: rgb(170, 170, 170);
     transition: all 0.25s ease-in-out;
     color: white;
     min-height: 10px;
@@ -521,7 +569,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .carousel-slider .carousel-pagination .item:hover {
-    background-color: rgb(134, 134, 134);
+    background-color: rgb(214, 214, 214);
 }
 
 /* CONTACT & COPYRIGHT */
@@ -1092,6 +1140,15 @@ label {
     margin-right: 0;
 }
 
+.service-img {
+    margin-top: 55px;
+    width: 380px;
+}
+
+.service-img img {
+    width: 100%;
+}
+
 .container .services-heading {
     position: relative;
     font-size: 75px;
@@ -1119,7 +1176,7 @@ label {
 .service-main-list {
     text-align: center;
     position: absolute;
-    right: 0;
+    right: 30px;
 }
 
 .service-main-list li {
@@ -1565,13 +1622,13 @@ label {
     position: relative;
 }
 
-.sm-clean a, 
-.sm-clean a:hover, 
-.sm-clean a:focus, 
-.sm-clean a:active {
+.sm-clean .menu-list, 
+.sm-clean .menu-list:hover, 
+.sm-clean .menu-list:focus, 
+.sm-clean .menu-list:active {
     color: #fff4ea;
     padding: 5px 0;
-    font-size: 50px;
+    font-size: 30px;
     line-height: 110%;
     font-weight: 800;
 }
@@ -1671,14 +1728,14 @@ label {
 }
 
 .service-list .heading {
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 19px;
+    font-weight: 600;
     border-bottom: 2px solid #f9b000;
 }
 
 .service-list .heading:hover {
-    font-weight: 500;
-    font-size: 20px;
+    font-weight: 600;
+    font-size: 19px;
 }
 
 .first li a.heading-list,
@@ -2032,11 +2089,6 @@ p.menu-text-title {
     margin-right: 5px;
 }
 
-/* .horizontal-slider .carousel-slider img {
-    height: 100vh;
-    max-width: none;
-} */
-
 .horizontal-slider .carousel-cat-links ul {
     list-style: none;
     padding: 0;
@@ -2250,6 +2302,31 @@ p.menu-text-title {
     }
 }
 
+@media screen and (max-width: 1279px) {
+    .approach-left {
+        left: 30px;
+    }
+    .approach-right {
+        right: 30px;    
+    }
+    .logo-contact .logo {
+        left: 50px;
+    }
+    .logo-contact .motto {
+        left: 20px;
+        max-width: 450px;
+    }
+    .logo-contact .motto h3 {
+        text-align: center;
+    }
+    .contact-copyright .contact-container {
+        bottom: 55px;
+    }
+    .contact-details {
+        width: calc(100vw - 100px);
+    }
+}
+
 
 @media screen and (max-width: 1024px) {
 
@@ -2271,6 +2348,148 @@ p.menu-text-title {
 
 @media screen and (max-width: 1020px) {   
 
+    .service-dropdown {
+        left: 100px;
+        top: -110px;
+    }
+
+    .service-dropdown .service-list ul {
+        margin-right: 50px;
+    }
+
+    .service-dropdown .service-list ul:first-child {
+        margin-right: 0;
+    }
+
+    .service-list a.heading {
+        font-size: 19px;
+    }
+
+    .horizontal-slider .swiper-slide {
+        width: 100vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+    }
+
+    .home,
+    .about-us,
+    .approach,
+    .testimonials,
+    .contact-work {
+        width: 100vw;
+        height: calc(100vh - 100px);
+    }
+
+    .approach-left {
+        left: 0;
+    }
+
+    .approach-right {
+        right: 0;
+    }
+
+    .testimonials {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .testimonial-card .page {
+        width: 55rem;
+        height: 60vh;
+    }
+
+    .carousel-slider .carousel-pagination {
+        bottom: 120px;
+    }
+
+    .contact-container .contact-inputs {
+        height: 40px;
+        width: 300px;
+    }
+
+    .contact-work .contact-details {
+        width: calc(100vw - 350px);
+    }
+
+    .contact-copyright,
+    .contact-details,
+    .copyright,
+    .work {
+        width: 100%;
+    }
+
+    .services-wrapper {
+        width: 100vw;
+        left: 0;
+    }
+
+    .container .services-main {
+        padding: 0;
+    }
+
+    .services-main .services {
+        height: calc(100vh - 100px);
+        top: 100px;
+    }
+
+    .service-main-list li:nth-child(1) a {
+        font-size: 100px;
+    }
+
+    .service-main-list li a {
+        font-size: 80px;
+    }
+
+    .service-img {
+        margin-top: 30px;
+    }
+
+    .service-left {
+        left: 50px;
+    }
+
+    .service-right {
+        right: 50px;
+    }
+
+    .creative-list, 
+    .dev-list.swiper-slide, 
+    .digital-list.swiper-slide {
+        height: 350px;
+    }
+
+    .contact-copyright.copyright-container {
+        width: 100%;
+    }
+
+    .services-part {
+        width: 100vw;
+        left: 0;
+        top: 100px;
+        margin-bottom: 100px;
+    }
+
+    .contact-copyright.copyright-section {
+        width: 100%;
+        left: 0;
+        height: calc(100vh - 100px);
+    }
+
+    .horizontal-slider .no-horizontal-slider {
+        margin-top: 0;
+    }
+    
+    .career-info {
+        left: unset;
+    }
+
+    .contact-container.contact-career {
+        top: 100px;
+    }
+
     .site-content {
         margin-top: 100px;
     }
@@ -2282,11 +2501,8 @@ p.menu-text-title {
 
     .header-logo {
         top: 0;
+        left: 0;
         transition: transform .3s linear;
-    }
-
-    .open .header-logo {
-        transform: translateX(-100%);
     }
 
     .menu-left-part.open {
@@ -2297,15 +2513,23 @@ p.menu-text-title {
         width: 100%;
         height: auto;
         min-height: 100px;
-    }    
+    }
+    
+    .socials {
+        display: none;
+    }
+    .pride {
+        display: none;
+    }
 
     #toggle {
         padding: 0;
     }
 
     .toggle-holder {
-        right: 0;
-        top: 0;
+        left: unset;
+        right: 10px;
+        top: 10px;
         bottom: auto;
     }
 
@@ -2314,7 +2538,7 @@ p.menu-text-title {
     }
 
     #header-main-menu {
-        width: 75% !important;
+        width:100% !important;
         display: block;
     }   
 
@@ -2325,9 +2549,9 @@ p.menu-text-title {
         width: 100%;
     }
 
-    /* .main-menu.sm-clean li a {
+    .main-menu.sm-clean li .menu-list {
         font-size: 30px;
-    } */
+    }
 
     .menu-left-part > * {
         position: relative;
@@ -2458,9 +2682,6 @@ p.menu-text-title {
 
     .horizontal-slider .no-horizontal-slider {
         display: block !important;
-        margin-top: 80px;
-        margin-left: 25px;
-        margin-right: 25px;
         text-align: center;
         max-width: calc(100% - 50px);
     }
@@ -2468,7 +2689,6 @@ p.menu-text-title {
     .horizontal-slider .no-horizontal-slider .swiper-slide {
         display: block !important;
         height: auto;
-        margin-bottom: 70px;
         margin-left: 0;
         margin-right: 0;
     }
@@ -2665,12 +2885,6 @@ p.menu-text-title {
         top: 8px;
         left: 78%;
     }
-    .socials {
-        display: none;
-    }
-    .pride {
-        display: none;
-    }
     #header-main-menu {
         padding-right: 0;
     }
@@ -2804,6 +3018,7 @@ p.menu-text-title {
         bottom: 240px;
         position: absolute;
         overflow-y: hidden;
+        left: 0;
     }
     .contact-container {
         bottom: 380px;
@@ -2988,6 +3203,16 @@ p.menu-text-title {
         width: 100%;
         margin-right: 0;
     }
+    .service-img {
+        margin-top: 90px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .service-img img {
+        width: 325px;
+    }
     .container .services-heading {
         font-size: 60px;
         text-align: center;
@@ -2999,6 +3224,7 @@ p.menu-text-title {
         margin-left: 0;
         top: 270px;
         left: 0;
+        right: 0;
     }
     .service-main-list li {
         margin-bottom: 0;
@@ -3170,8 +3396,4 @@ p.menu-text-title {
     .digital-col:last-child {
         margin-bottom: 150px;
     }
-<<<<<<< HEAD
 }
-=======
-}
->>>>>>> 939af430ebb976349c27028aa91e53abba7e1696
