--- a/style.css
+++ b/style.css
@@ -2990,6 +2990,9 @@ p.menu-text-title {
     .testimonial-card .page {
         height: 100%;
     }
+    .testimonial-content p {
+        width: 90%;
+    }
     .testimonial-details {
         margin-left: 0;
     }
@@ -3007,7 +3010,7 @@ p.menu-text-title {
     .logo-contact .logo {
         width: 270px;
         left: 40px;
-        top: -60px;
+        top: -80px;
         bottom: unset;
         position: absolute;
     }
@@ -3015,10 +3018,13 @@ p.menu-text-title {
         display: none;
     }
     .contact-copyright .contact-container {
-        bottom: 240px;
+        bottom: 200px;
         position: absolute;
         overflow-y: hidden;
         left: 0;
+    }
+    .contact-work .contact-details {
+        width: 100%;
     }
     .contact-container {
         bottom: 380px;
@@ -3033,7 +3039,7 @@ p.menu-text-title {
         width: 100%;
         margin-left: 0;
         gap: 5px;
-        bottom: 45px;
+        bottom: 55px;
     }
     .contact-phone, 
     .contact-mail, 
@@ -3061,7 +3067,6 @@ p.menu-text-title {
         width: 100%;
         flex-direction: column;
         height: 100%;
-        bottom: 5px;
         background: #fff4ea;
     }
     .flag-container {
@@ -3105,6 +3110,7 @@ p.menu-text-title {
         max-width: 100%;
     }
     .horizontal-slider .no-horizontal-slider .swiper-slide {
+        top: 80px;
         margin-bottom: 0;
         height: 100%;
         background: #fff4ea;
@@ -3113,9 +3119,15 @@ p.menu-text-title {
         margin-left: 0;
         margin-right: 0;
         max-width: 100%;
+        height: 100%;
     }
     .horizontal-slider .no-horizontal-slider .swiper-slide:last-child {
-        margin-bottom: 0;
+        top: 0;
+        height: 100%;
+    }
+    .horizontal-slider .swiper-slide {
+        top: 0;
+        height: 100%;
     }
     .contact-btn {
         font-size: 16px;
