--- a/style.css
+++ b/style.css
@@ -2967,9 +2967,10 @@ label {
     }
     .services-main .services {
         display: block;
-        height: 100%;
+        height: calc(100vh - 80px);
         width: 100%;
         margin-right: 0;
+        top: 0;
     }
     .service-img {
         margin-top: 90px;
