--- a/style.css
+++ b/style.css
@@ -1132,8 +1132,8 @@ label {
 }
 
 .service-img {
-    margin-top: 55px;
-    width: 380px;
+    margin-bottom: 35px;
+    width: 410px;
 }
 
 .service-img img {
